fallback bg-color + accessibility fixes

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </header>
     <!--CONTAINER-->
     <div class="container">
-        <label for="result">Your movie:</label>
+        <h2>Your movie:</h2>
         <span id="result"></span>
         <!--Mickey Mouse Ears button-->
         <div class="btn">
-            <div class="ears" onclick="randomMovie()"></div>
+            <div class="ears" id="ears-btn" onclick="randomMovie()" tabindex="0"></div>
         </div>
     </div>
     <!--FOOTER-->
