changed footer text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--FOOTER-->
     <footer>
         <p>
-            &copy; <a href="https://github.com/emblo">Emblo</a> <span id="year"></span>. 
+            Made with <span role="img" aria-label="blue heart with a black border">&#128153;</span> by <a href="https://github.com/emblo" target="_blank" rel="noopener noreferrer">Emblo</a> <span id="year"></span>. 
             <br />
             Disney and all associated information belongs to &copy;<a href="https://thewaltdisneycompany.com/"> The Walt Disney Company</a>.
         </p>
